<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/ll_fragment_ng_card_flow_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <cc.bogerchan.geographic.view.GeoTextView
            android:id="@+id/gtv_fragment_ng_card_flow_error_icon"
            style="@style/AppTheme.IconText"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/ic_refresh"
            app:typefaceFromAssets="@string/app_icon_font" />

        <cc.bogerchan.geographic.view.GeoTextView
            android:id="@+id/gtv_fragment_ng_card_flow_error"
            style="@style/AppTheme.LoadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_refresh"
            app:typefaceFromAssets="@string/app_text_font" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fragment_ng_card_flow_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <app.dinus.com.loadingdrawable.LoadingView
            android:id="@+id/lv_fragment_ng_card_flow_loading"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:loading_renderer="DanceLoadingRenderer" />

        <cc.bogerchan.geographic.view.GeoTextView
            android:id="@+id/gtv_fragment_ng_card_flow_loading"
            style="@style/AppTheme.LoadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_loading"
            android:textColor="@android:color/white"
            app:typefaceFromAssets="@string/app_text_font" />

    </LinearLayout>

    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
        android:id="@+id/trl_fragment_ng_card_flow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_fragment_ng_card_flow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none" />
    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
</FrameLayout>
