<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cc.bogerchan.geographic.ui.bing.BingDailyFragment">

    <LinearLayout
        android:id="@+id/ll_fragment_bing_daily_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <cc.bogerchan.geographic.view.GeoTextView
            android:id="@+id/gtv_fragment_bing_daily_error_icon"
            style="@style/AppTheme.IconText"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/ic_refresh"
            app:typefaceFromAssets="@string/app_icon_font" />

        <cc.bogerchan.geographic.view.GeoTextView
            android:id="@+id/gtv_fragment_bing_daily_error"
            style="@style/AppTheme.LoadingErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_refresh"
            app:typefaceFromAssets="@string/app_text_font" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fragment_bing_daily_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <app.dinus.com.loadingdrawable.LoadingView
            android:id="@+id/lv_fragment_bing_daily_loading"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:loading_renderer="DanceLoadingRenderer" />

        <cc.bogerchan.geographic.view.GeoTextView
            android:id="@+id/gtv_fragment_bing_daily_loading"
            style="@style/AppTheme.LoadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_loading"
            android:textColor="@android:color/white"
            app:typefaceFromAssets="@string/app_text_font" />

    </LinearLayout>

    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
        android:id="@+id/trl_fragment_bing_daily"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdv_fragment_bing_daily_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:visibility="invisible" />

                <WebView
                    android:layout_margin="15dp"
                    android:id="@+id/wv_fragment_bing_daily_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:visibility="invisible"
                    tools:ignore="WebViewLayout" />
            </LinearLayout>
        </ScrollView>
    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
</FrameLayout>
