<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/sdv_fragment_ng_card_show_background_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_fragment_ng_card_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        fresco:actualImageScaleType="focusCrop" />

    <LinearLayout
        android:id="@+id/ll_fragment_ng_card_show_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark50"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <cc.bogerchan.geographic.view.GeoTextView
                android:id="@+id/gtv_fragment_ng_card_show_intro_title"
                style="@style/AppTheme.NGCardShowIntroTitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:typefaceFromAssets="@string/app_text_font" />

            <cc.bogerchan.geographic.view.GeoTextView
                android:id="@+id/tv_fragment_ng_card_show_intro_page"
                style="@style/AppTheme.NGCardShowIntroTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:typefaceFromAssets="@string/app_text_font" />
        </LinearLayout>

        <View
            style="@style/AppTheme.Divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:fadingEdge="none"
            android:scrollbars="none">

            <cc.bogerchan.geographic.view.GeoTextView
                android:id="@+id/tv_fragment_ng_card_show_intro_content"
                style="@style/AppTheme.NGCardShowIntroContentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:typefaceFromAssets="@string/app_text_font" />
        </ScrollView>

        <View
            android:id="@+id/v_fragment_ng_card_show_menu_divider"
            style="@style/AppTheme.Divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:id="@+id/ll_fragment_ng_card_show_menu_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <cc.bogerchan.geographic.view.GeoTextView
                    style="@style/AppTheme.NGCardShowMenuIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_share"
                    app:typefaceFromAssets="@string/app_icon_font" />

                <cc.bogerchan.geographic.view.GeoTextView
                    style="@style/AppTheme.NGCardShowMenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_share"
                    app:typefaceFromAssets="@string/app_text_font" />
            </LinearLayout>

            <View
                style="@style/AppTheme.Divider"
                android:layout_width="1px"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/ll_fragment_ng_card_show_menu_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <cc.bogerchan.geographic.view.GeoTextView
                    style="@style/AppTheme.NGCardShowMenuIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_save"
                    app:typefaceFromAssets="@string/app_icon_font" />

                <cc.bogerchan.geographic.view.GeoTextView
                    style="@style/AppTheme.NGCardShowMenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_save"
                    app:typefaceFromAssets="@string/app_text_font" />
            </LinearLayout>

            <View
                style="@style/AppTheme.Divider"
                android:layout_width="1px"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/ll_fragment_ng_card_show_menu_fav"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <cc.bogerchan.geographic.view.GeoTextView
                    android:id="@+id/gtv_fragment_ng_card_show_menu_fav_icon"
                    style="@style/AppTheme.NGCardShowMenuIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ic_fav"
                    app:typefaceFromAssets="@string/app_icon_font" />

                <cc.bogerchan.geographic.view.GeoTextView
                    style="@style/AppTheme.NGCardShowMenuText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_fav"
                    app:typefaceFromAssets="@string/app_text_font" />
            </LinearLayout>

            <View
                style="@style/AppTheme.Divider"
                android:layout_width="1px"
                android:layout_height="match_parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <cc.bogerchan.geographic.view.GeoTextView
        android:id="@+id/gtv_fragment_ng_card_show_menu_indicator"
        style="@style/AppTheme.NGCardShowMenuIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/ic_more"
        android:visibility="visible"
        app:typefaceFromAssets="@string/app_icon_font" />
</FrameLayout>