<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="geographic.boger.me.nationalgeographic.biz.splash.SplashActivity">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/sdv_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:placeholderImage="@mipmap/splash"
        app:placeholderImageScaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_gradient_overlay" />

    <FrameLayout
        android:id="@+id/fl_splash_logo"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="40dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:placeholderImage="@drawable/ng_logo_pure"
            app:placeholderImageScaleType="centerCrop" />

        <cc.bogerchan.geographic.view.GeoTextView
            style="@style/AppTheme.SplashText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:text="@string/text_splash_title_1"
            android:textSize="18dp"
            app:typefaceFromAssets="@string/app_text_font" />

        <cc.bogerchan.geographic.view.GeoTextView
            style="@style/AppTheme.SplashText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/text_splash_title_2"
            android:textSize="14dp"
            app:typefaceFromAssets="@string/app_text_font" />

    </FrameLayout>
</FrameLayout>
