<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_activity_main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/ll_activity_main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TabLayout
            android:id="@+id/tl_activity_main_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/ng_yellow"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/ng_yellow"
            app:tabTextColor="@drawable/selector_retry_foreground" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_activity_main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_activity_main_full_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_activity_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary70"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="snap">

            <cc.bogerchan.geographic.view.GeoTextView
                android:id="@+id/gtv_activity_main_title"
                style="@style/AppTheme.NGTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_ng_logo"
                android:padding="12dp"
                android:text="@string/text_action_bar"
                app:typefaceFromAssets="@string/app_text_font" />

            <cc.bogerchan.geographic.view.GeoTextView
                android:id="@+id/gtv_activity_main_menu"
                style="@style/AppTheme.NGTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="12dp"
                android:text="@string/ic_menu"
                app:typefaceFromAssets="@string/app_icon_font" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/ll_activity_main_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/color_black_70"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <app.dinus.com.loadingdrawable.LoadingView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:actualImageScaleType="centerCrop"
            app:loading_renderer="DanceLoadingRenderer" />

        <cc.bogerchan.geographic.view.GeoTextView
            style="@style/AppTheme.LoadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_loading"
            android:textColor="@android:color/white"
            app:typefaceFromAssets="@string/app_text_font" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_activity_main_overlay_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@color/color_gray_90"
        android:visibility="invisible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/llc_activity_main_overlay_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
